[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GameController.gd" type="Script" id=2]

[node name="GameController" type="Node"]
script = ExtResource( 2 )

[node name="PullTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="NextFishTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="PullTimer" to="." method="_on_PullTime_timeout"]
[connection signal="timeout" from="NextFishTimer" to="." method="_on_NextFishTimer_timeout"]
